--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,61 @@ explore*
 # Virtual environments
 .venv
 explore.ipynb
+#
+# Airflow configuration and databases
+airflow.cfg
+unittests.cfg
+airflow.db
+unittests.db
+
+# Airflow temporary artifacts and runtime files
+/logs/
+*.pid
+airflow/git_version
+webserver_config.py*
+
+# Python byte-compiled files and environment artifacts
+__pycache__/
+*.py[cod]
+*$py.class
+.Python.env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+
+# Unit test and coverage reports
+htmlcov/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage*.xml
+*,cover
+.hypothesis/
+.pytest_cache/
+
+# IDE and virtual environment folders (adjust as needed)
+.vscode/
+.idea/
+venv/
+.venv/
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# OS generated files
+.DS_Store
+.Trash/
+*.swp
